<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:orientation="vertical"
    android:padding="24dp"
    android:background="@drawable/resipi"
    android:gravity="start"
    android:layout_width="match_parent"
    android:layout_height="match_parent">

    <Button
        android:id="@+id/btnLogout"
        android:text="@string/logout"
        android:layout_width="93dp"
        android:layout_marginBottom="90dp"
        android:backgroundTint="#FF2400"
        android:layout_height="50dp" />

    <ImageView
        android:id="@+id/imgLogo"
        android:layout_width="120dp"
        android:layout_height="120dp"
        android:layout_gravity="center"
        android:layout_marginBottom="16dp"
        android:contentDescription="@string/logo"
        android:src="@drawable/logogo" />

    <TextView
        android:id="@+id/tvUserWelcome"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_gravity="center"
        android:layout_marginBottom="20dp"
        android:text="@string/welcome_user"
        android:textStyle="bold"
        android:typeface="serif"
        android:textColor="@color/white"
        android:textSize="30sp" />

    <Button
        android:id="@+id/btnBrowseByCategory"
        android:backgroundTint="#00AB41"
        android:layout_marginBottom="20dp"
        android:text="@string/browse_by_category"
        android:layout_width="300dp"
        android:textStyle="bold"
        android:layout_gravity="center"
        android:layout_height="wrap_content"/>

    <Button
        android:id="@+id/btnSearchRecipeUser"
        android:backgroundTint="#00AB41"
        android:text="@string/search_recipes"
        android:layout_marginBottom="20dp"
        android:layout_width="300dp"
        android:textStyle="bold"
        android:layout_gravity="center"
        android:layout_height="wrap_content"/>

    <Button
        android:id="@+id/btnFavorites"
        android:backgroundTint="#00AB41"
        android:text="@string/favorite_recipes"
        android:layout_width="300dp"
        android:textStyle="bold"
        android:layout_gravity="center"
        android:layout_height="wrap_content"/>
</LinearLayout>
