<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@drawable/resipi"
    android:padding="16dp">

    <LinearLayout
        android:orientation="vertical"
        android:layout_width="match_parent"
        android:layout_height="wrap_content">

        <TextView
            android:id="@+id/tvDetailTitle"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="25dp"
            android:text="@string/recipe_title"
            android:textColor="@color/white"
            android:textSize="22sp"
            android:textStyle="bold" />

        <TextView
            android:id="@+id/tvDetailCategory"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="4dp"
            android:layout_marginBottom="15dp"
            android:text="@string/category"
            android:textColor="@color/white"
            android:textSize="14sp" />

        <TextView
            android:id="@+id/tvDetailIngredientsLabel"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="16dp"

            android:text="@string/ingredients"
            android:textColor="@color/white"
            android:textSize="16sp"
            android:textStyle="bold" />

        <TextView
            android:id="@+id/tvDetailIngredients"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/ingredients_go_here"
            android:layout_marginBottom="15dp"
            android:textColor="@color/white" />

        <TextView
            android:id="@+id/tvDetailInstructionsLabel"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="16dp"
            android:text="@string/instructions"
            android:textColor="@color/white"
            android:textSize="16sp"
            android:textStyle="bold" />

        <TextView
            android:id="@+id/tvDetailInstructions"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/instructions_go_here"
            android:layout_marginBottom="25dp"
            android:textColor="@color/white" />

        <Button
            android:id="@+id/btnToggleFavorite"
            android:layout_gravity="center"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:backgroundTint="#00AB41"
            android:textStyle="bold"
            android:text="@string/add_to_favorites"
            android:layout_marginTop="16dp"/>
    </LinearLayout>
</ScrollView>
