<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:orientation="vertical"
    android:padding="24dp"
    android:background="@drawable/resipi"
    android:gravity="center"
    android:layout_width="match_parent"
    android:layout_height="match_parent">

    <ImageView
        android:id="@+id/imgLogo"
        android:layout_width="120dp"
        android:layout_height="120dp"
        android:layout_marginBottom="16dp"
        android:contentDescription="@string/logo"
        android:src="@drawable/logogo" />

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginBottom="10dp"
        android:text="@string/login_as"
        android:typeface="serif"
        android:textStyle="bold"
        android:textColor="@color/white"
        android:textSize="30sp" />

    <Spinner
        android:id="@+id/spinnerRole"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:textColor="@color/white"
        android:backgroundTint="@color/white"
        android:layout_marginTop="16dp"
        android:minHeight="48dp" />

    <EditText
        android:id="@+id/etEmail"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:alpha="1"
        android:autofillHints=""
        android:hint="@string/enter_your_email"
        android:textColor="@color/white"
        android:inputType="textEmailAddress"
        android:minHeight="48dp"
        android:textColorHint="#E8EAF6"
        tools:ignore="VisualLintTextFieldSize" />

    <EditText
        android:id="@+id/etPassword"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:autofillHints=""
        android:textColor="@color/white"
        android:hint="@string/password"
        android:inputType="textPassword"
        android:minHeight="48dp"
        android:textColorHint="#E8EAF6"
        tools:ignore="VisualLintTextFieldSize" />

    <Button
        android:id="@+id/btnLogin"
        android:layout_width="300dp"
        android:layout_height="wrap_content"
        android:layout_marginTop="24dp"
        android:backgroundTint="#00AB41"
        android:text="@string/login"
        android:textColor="@color/white"
        tools:ignore="VisualLintButtonSize" />

    <TextView
        android:id="@+id/tvCreateAccount"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="20dp"
        android:clickable="true"
        android:focusable="true"
        android:minHeight="48dp"
        android:text="@string/create_new_account"
        android:textColor="@color/white"
        android:textSize="16sp"
        android:textStyle="bold" />

</LinearLayout>
