<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:orientation="vertical"
    android:padding="24dp"
    android:gravity="center"
    android:background="@drawable/resipi"
    android:layout_width="match_parent"
    android:layout_height="match_parent">

    <TextView
        android:id="@+id/tvRegistrationTitle"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/registration"
        android:textSize="30sp"
        android:typeface="serif"
        android:textStyle="bold"
        android:textColor="@color/white"
        android:layout_marginBottom="16dp" />

    <Spinner
        android:id="@+id/spinnerRole"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:backgroundTint="@color/white"
        android:layout_marginTop="12dp"
        android:textColor="@color/white"
        android:minHeight="48dp" />

    <EditText
        android:id="@+id/etEmail"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:autofillHints=""
        android:textColor="@color/white"
        android:hint="@string/email"
        android:inputType="textEmailAddress"
        android:minHeight="48dp"
        android:textColorHint="@color/white"
        tools:ignore="TextContrastCheck" />

    <EditText
        android:id="@+id/etPassword"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:textColor="@color/white"
        android:layout_marginTop="12dp"
        android:autofillHints=""
        android:hint="@string/password"
        android:inputType="textPassword"
        android:minHeight="48dp"
        android:textColorHint="@color/white" />

    <EditText
        android:id="@+id/etConfirmPassword"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="12dp"
        android:textColor="@color/white"
        android:autofillHints=""
        android:hint="@string/confirm_password"
        android:inputType="textPassword"
        android:minHeight="48dp"
        android:textColorHint="@color/white" />

    <Button
        android:id="@+id/btnRegister"
        android:text="@string/register"
        android:textStyle="bold"
        android:backgroundTint="#00AB41"
        android:layout_marginTop="24dp"
        android:layout_width="300dp"
        android:layout_height="wrap_content" />
</LinearLayout>
