<?xml version="1.0" encoding="utf-8"?>
<FrameLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:padding="8dp">

    <androidx.cardview.widget.CardView
        xmlns:card_view="http://schemas.android.com/apk/res-auto"
        xmlns:tools="http://schemas.android.com/tools"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_margin="8dp"
        card_view:cardCornerRadius="12dp"
        card_view:cardElevation="4dp"
        android:foreground="?attr/selectableItemBackground">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        android:padding="12dp"
        android:gravity="center_vertical">

        <LinearLayout
            android:layout_width="0dp"
            android:layout_weight="1"
            android:layout_height="wrap_content"
            android:orientation="vertical">

            <TextView
                android:id="@+id/tvTitle"
                android:typeface="serif"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/recipe_title"
                android:textSize="18sp"
                android:textStyle="bold"
                android:textColor="@android:color/black"
                android:maxLines="1"
                android:ellipsize="end" />

            <TextView
                android:id="@+id/tvCategory"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="4dp"
                android:ellipsize="end"
                android:maxLines="1"
                android:text="@string/category"
                android:textColor="#757575"
                android:textSize="14sp" />
        </LinearLayout>

        <ImageView
            android:id="@+id/imgThumbnail"
            android:layout_width="100dp"
            android:layout_height="100dp"
            android:layout_marginEnd="12dp"
            android:scaleType="centerCrop"
            android:contentDescription="@string/recipe_image" />

        <ImageButton
            android:id="@+id/btnDelete"
            android:layout_width="40dp"
            android:layout_height="40dp"
            android:background="?attr/selectableItemBackgroundBorderless"
            android:contentDescription="@string/delete_recipe"
            android:src="@android:drawable/ic_delete"
            card_view:tint="@android:color/holo_red_dark"
            tools:ignore="TouchTargetSizeCheck" />
        </LinearLayout>
    </androidx.cardview.widget.CardView>
</FrameLayout>